优化时间显示；图片可隐藏信息栏

--- a/GankIO/Resources/CategoryTemplate.xaml
+++ b/GankIO/Resources/CategoryTemplate.xaml
@@ -59,7 +59,7 @@
                            RelativePanel.AlignLeftWith="TypeText">
                     <Run Text="{x:Bind who}" />
                     <LineBreak />
-                    <Run Text="{x:Bind publishedAt, Converter={StaticResource StrFormatConverter}, ConverterParameter=\{0:yy/MM/dd\}}" />
+                    <Run Text="{x:Bind publishedAt, Converter={StaticResource ReadableDateConverter}}" />
                 </TextBlock>
 
                 <BitmapIcon Name="TypeIcon"
