--- a/GankIO/Views/PhotosPage.xaml
+++ b/GankIO/Views/PhotosPage.xaml
@@ -69,6 +69,12 @@
                               Label="刷新" />
 
             </t10Ctrls:PageHeader.PrimaryCommands>
+            <t10Ctrls:PageHeader.SecondaryCommands>
+                <AppBarToggleButton Name="ShowImageInfoAppBarButton"
+                                    IsChecked="True"
+                                    IsThreeState="False"
+                                    Label="显示图片信息"/>
+            </t10Ctrls:PageHeader.SecondaryCommands>
 
 
         </t10Ctrls:PageHeader>
@@ -79,12 +85,12 @@
                       IsItemClickEnabled="True"
                       IsSwipeEnabled="True"
                       ItemClick="ItemsGridView_ItemClick"
-                      SelectionChanged="ItemsGridView_SelectionChanged"
                       ItemsSource="{x:Bind ViewModel.Fulis, Mode=OneWay}"
                       RelativePanel.AlignBottomWithPanel="True"
                       RelativePanel.AlignLeftWithPanel="True"
                       RelativePanel.AlignRightWithPanel="True"
                       RelativePanel.AlignTopWithPanel="True"
+                      SelectionChanged="ItemsGridView_SelectionChanged"
                       ShowsScrollingPlaceholders="True">
                 <!--  ItemContainerStyleSelector="{StaticResource VariableSizedStyleSelector}"  -->
                 <!--<Interactivity:Interaction.Behaviors>
@@ -152,14 +158,15 @@
                             <Border Grid.Row="1"
                                     Height="28"
                                     VerticalAlignment="Bottom"
-                                    Background="#AA777777">
-                                <TextBlock HorizontalAlignment="Right"
+                                    Background="#AA777777"
+                                    Visibility="{Binding IsChecked, Converter={StaticResource BoolToVisibilityConverter}, ElementName=ShowImageInfoAppBarButton}" >
+                                <TextBlock Margin="5,0"
+                                           HorizontalAlignment="Right"
                                            VerticalAlignment="Center"
-                                           Margin="5,0"
                                            Foreground="White">
                                     <Run Text="{x:Bind who}" />
                                     <Span />
-                                    <Run Text="{x:Bind publishedAt, Converter={StaticResource StrFormatConverter}, ConverterParameter=\{0:yy/MM/dd\}}" />
+                                    <Run Text="{x:Bind publishedAt, Converter={StaticResource ReadableDateConverter}}" />
                                     <Span />
                                 </TextBlock>
                             </Border>
