--- a/GankIO/Views/Shell.xaml
+++ b/GankIO/Views/Shell.xaml
@@ -1,64 +1,64 @@
 ﻿<Page x:Class="GankIO.Views.Shell"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:views="using:GankIO.Views"
       xmlns:t10Ctrls="using:Template10.Controls"
+      xmlns:views="using:GankIO.Views"
       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
       mc:Ignorable="d">
-    <t10Ctrls:HamburgerMenu x:Name="MyHamburgerMenu">
+    <Grid>
+        <t10Ctrls:HamburgerMenu x:Name="MyHamburgerMenu">
 
-        <t10Ctrls:HamburgerMenu.PrimaryButtons>
-            <!--  mainpage button  -->
-            <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:MainPage">
-                <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                    <ContinuumNavigationTransitionInfo />
-                </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                <StackPanel Orientation="Horizontal">
-                    <SymbolIcon Width="48"
-                                Height="48"
-                                Symbol="Home" />
-                    <TextBlock Margin="12,0,0,0"
-                               VerticalAlignment="Center"
-                               Text="首页" />
-                </StackPanel>
-            </t10Ctrls:HamburgerButtonInfo>
-            <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:CategorysPage">
-                <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                    <EntranceNavigationTransitionInfo />
-                </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                <StackPanel Orientation="Horizontal">
-                    <SymbolIcon Width="48"
-                                Height="48"
-                                Symbol="List" />
-                    <TextBlock Margin="12,0,0,0"
-                               VerticalAlignment="Center"
-                               Text="全部" />
-                </StackPanel>
-            </t10Ctrls:HamburgerButtonInfo>
-            <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:PhotosPage">
-                <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                    <DrillInNavigationTransitionInfo />
-                </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                <StackPanel Orientation="Horizontal">
-                    <SymbolIcon Width="48" Height="48" />
-                    <TextBlock Margin="12,0,0,0"
-                               VerticalAlignment="Center"
-                               Text="福利" />
-                </StackPanel>
-            </t10Ctrls:HamburgerButtonInfo>
-        </t10Ctrls:HamburgerMenu.PrimaryButtons>
+            <t10Ctrls:HamburgerMenu.PrimaryButtons>
+                <!--  mainpage button  -->
+                <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:MainPage">
+                    <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                        <ContinuumNavigationTransitionInfo />
+                    </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48"
+                                    Height="48"
+                                    Symbol="Home" />
+                        <TextBlock Margin="12,0,0,0"
+                                   VerticalAlignment="Center"
+                                   Text="首页" />
+                    </StackPanel>
+                </t10Ctrls:HamburgerButtonInfo>
+                <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:CategorysPage">
+                    <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                        <EntranceNavigationTransitionInfo />
+                    </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48"
+                                    Height="48"
+                                    Symbol="List" />
+                        <TextBlock Margin="12,0,0,0"
+                                   VerticalAlignment="Center"
+                                   Text="全部" />
+                    </StackPanel>
+                </t10Ctrls:HamburgerButtonInfo>
+                <t10Ctrls:HamburgerButtonInfo ClearHistory="False" PageType="views:PhotosPage">
+                    <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                        <DrillInNavigationTransitionInfo />
+                    </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48" Height="48" />
+                        <TextBlock Margin="12,0,0,0"
+                                   VerticalAlignment="Center"
+                                   Text="福利" />
+                    </StackPanel>
+                </t10Ctrls:HamburgerButtonInfo>
+            </t10Ctrls:HamburgerMenu.PrimaryButtons>
 
-        <t10Ctrls:HamburgerMenu.SecondaryButtons>
-            <t10Ctrls:HamburgerButtonInfo ButtonType="Literal">
-                <HyperlinkButton Margin="60,0"
-                                 NavigateUri="http://gank.io"
-                                 Content="{Binding NavigateUri, RelativeSource={RelativeSource Mode=Self}}"
-                                 ></HyperlinkButton>                
-            </t10Ctrls:HamburgerButtonInfo>
-            <!--  profile button  -->
-            <!--<Controls:HamburgerButtonInfo ButtonType="Command">
+            <t10Ctrls:HamburgerMenu.SecondaryButtons>
+                <t10Ctrls:HamburgerButtonInfo ButtonType="Literal">
+                    <HyperlinkButton Margin="60,0"
+                                     Content="{Binding NavigateUri, RelativeSource={RelativeSource Mode=Self}}"
+                                     NavigateUri="http://gank.io" />
+                </t10Ctrls:HamburgerButtonInfo>
+                <!--  profile button  -->
+                <!--<Controls:HamburgerButtonInfo ButtonType="Command">
                 <Interactivity:Interaction.Behaviors>
                     <Core:EventTriggerBehavior EventName="Tapped">
                         <behaviors:MessageDialogAction Title="Show profile" Content="This is an example of a Command-type hamburger button. It does not navigate, only raises the Tapped event for some custom implementation." />
@@ -78,24 +78,36 @@
                                Text="User profile" />
                 </StackPanel>
             </Controls:HamburgerButtonInfo>-->
-            <!--  settingspage button  -->
-            <t10Ctrls:HamburgerButtonInfo x:Name="SettingsButton"
-                                          PageParameter="0"
-                                          PageType="views:SettingsPage">
-                <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                    <SlideNavigationTransitionInfo />
-                </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
-                <StackPanel Orientation="Horizontal">
-                    <SymbolIcon Width="48"
-                                Height="48"
-                                Symbol="Setting" />
-                    <TextBlock Margin="12,0,0,0"
-                               VerticalAlignment="Center"
-                               Text="设置" />
-                </StackPanel>
-            </t10Ctrls:HamburgerButtonInfo>
-        </t10Ctrls:HamburgerMenu.SecondaryButtons>
+                <!--  settingspage button  -->
+                <t10Ctrls:HamburgerButtonInfo x:Name="SettingsButton"
+                                              PageParameter="0"
+                                              PageType="views:SettingsPage">
+                    <t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                        <SlideNavigationTransitionInfo />
+                    </t10Ctrls:HamburgerButtonInfo.NavigationTransitionInfo>
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48"
+                                    Height="48"
+                                    Symbol="Setting" />
+                        <TextBlock Margin="12,0,0,0"
+                                   VerticalAlignment="Center"
+                                   Text="设置" />
+                    </StackPanel>
+                </t10Ctrls:HamburgerButtonInfo>
+            </t10Ctrls:HamburgerMenu.SecondaryButtons>
 
-    </t10Ctrls:HamburgerMenu>
-
+        </t10Ctrls:HamburgerMenu>
+        <Border x:Name="MessageBorder"
+                Padding="12,5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="{ThemeResource SystemControlDisabledAccentBrush}"
+                Visibility="Collapsed">
+            <TextBlock x:Name="MessageBlock"
+                       FontSize="24"
+                       Foreground="White">
+                Message
+            </TextBlock>
+        </Border>
+    </Grid>
 </Page>
