--- a/GankIO/Views/SettingsPage.xaml
+++ b/GankIO/Views/SettingsPage.xaml
@@ -240,7 +240,7 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         AdUnitId="333011"
-                        ApplicationId="05236aaa-193c-4453-b227-e4c815f14002"
+                        ApplicationId="9nblggh412kz"
                         RelativePanel.AlignBottomWithPanel="True"
                         RelativePanel.AlignHorizontalCenterWithPanel="True" />
         <VisualStateManager.VisualStateGroups>
